added circle move to right spot

--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,47 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.personal-pfp {
+  /* pointer-events: none; */
+  border-radius: 0.85rem;
+  height: 75%;
+  width: auto;
+  flex: 0 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (prefers-reduced-motion: no-preference) and (hover: hover) {
+  .personal-pfp:hover {
+    animation: personal-pfp-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.app-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 5vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
+  padding-right: 2rem;
+  padding-left: 2rem;
   color: white;
+}
+
+.app-body {
+  width: 100vw;
+  height: 95vh;
+  display: flex;
+  align-items: center;
+
+  justify-content: center;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes personal-pfp-spin {
   from {
     transform: rotate(0deg);
   }
