--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -36,6 +40,12 @@
   align-items: center;
 
   justify-content: center;
+}
+
+.navigation-body {
+  width: 100vw;
+  height: 95vh;
+  @apply grid grid-cols-3;
 }
 
 .App-link {
