--- a/src/components/WheelCircle/WheelCircle.css
+++ b/src/components/WheelCircle/WheelCircle.css
@@ -10,9 +10,9 @@
 
 .wheel-circle {
   width: 25%;
-  height: 25%;
+  height: 15%;
   background-color: orange;
-  border-radius: 50%;
+  border-radius: 45%;
   z-index: 10;
   opacity: 0.9;
 }
@@ -31,55 +31,24 @@
   width: 100px;
   height: 100px;
   background-color: blue;
-  transition: transform 1s ease-out;
+  transition: transform 1s ease-out, opacity 1s ease-out;
   z-index: 5;
+  opacity: 0;
 }
 
 .floater.animate-spiral {
+  opacity: 1;
   transform: translate(calc(50% - 50px), calc(50% - 50px)) rotate(var(--rotate))
     translateY(-40cqh);
   transition-duration: 1s;
 }
 
 .floater.animate-straight {
+  opacity: 1;
   transform: translate(calc(50% - 50px), calc(50% - 50px))
     translateX(var(--translate-x)) translateY(var(--translate-y));
-  transition-duration: 1s;
+  transition-duration: 2s;
 }
-
-/* next add one that goes striaaght out
-
-.floater.animate0straight {
-  transform: translate(var(--translate-x), var(--translate-y));
-  transition-duration: 3s;
-}
-
-            style={{
-              "--translate-x": `${translateX}px`,
-              "--translate-y": `${translateY}px`,
-            }}
-
-
-            let distance = 40; // Distance from the center of the circle
-        let translateX = Math.cos(angle) * distance;
-        let translateY = Math.sin(angle) * distance;
-        
-*/
-/* 
-.floater.animate {
-  transform: translate(40cqh) rotate(var(--rotate));
-  transition-duration: 3s;
-}
- */
-
-/* animation: circle_around 3s infinite; */
-
-/* 
-.wheel-circle:hover + .floater {
-  transform: translate(40cqh);
-  transition-duration: 3s;
-  /* transform: vibrate(1s 2s infinite); */
-/* vibrate 1s 2s infinite; */
 
 @keyframes deactivate {
   /* from {
