--- a/src/App.css
+++ b/src/App.css
@@ -41,15 +41,47 @@
 
   justify-content: center;
 }
-
-.navigation-body {
+.background-container {
+  position: relative;
+  width: 100%; /* Adjust based on your layout */
+  height: 100vh; /* Adjust based on your layout */
+  background-image: url("content/home_bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.still-navigation-body {
   width: 100vw;
   height: 95vh;
   @apply grid grid-cols-3;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.dynamic-navigation-body {
+  width: 100vw;
+  height: 95vh;
+  position: relative;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.hover-target {
+  position: absolute;
+  top: 50%; /* Adjust to target specific area */
+  left: 50%; /* Adjust to target specific area */
+  width: 100px; /* Adjust based on your needs */
+  height: 100px; /* Adjust based on your needs */
+  background-color: red;
+  cursor: pointer; /* Shows a pointer cursor on hover */
+}
+
+.hover-target:hover {
+  /* Example effect: change opacity, could trigger animation or other changes */
+  opacity: 0.5; /* This is just for demonstration */
 }
 
 @keyframes personal-pfp-spin {
